@@ -18,8 +18,7 @@ SOAF_LOG_PREP_FN_ATTR="soaf_log_prep_fn"
 ################################################################################
 
 soaf_log_cfg() {
-	local APPLI_NATURE=$1
-	local APPLI_NAME=$(soaf_map_get $APPLI_NATURE $SOAF_APPLI_NAME_ATTR)
+	local APPLI_NAME=$(soaf_module_this_appli_name)
 	soaf_cfg_set SOAF_LOG_LEVEL $SOAF_LOG_INFO
 	soaf_cfg_set SOAF_LOG_LEVEL_STDERR $SOAF_LOG_ERR
 	###---------------
